assets/stylesheets/main.css
/* CH01 - Resets
 * CH02 - General Setup
 * CH03 - Navigation Menu
 * CH04 - Title Screen
 * CH05 - About Screen
 * CH06 - Projects Screen
 * CH07 - Resume Screen
 * CH08 - Contact Screen
 * CH09 - Responsive Design
*/

/* CH01 - Resets */

/* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
    margin: 0;
    padding: 0;
    border: 0;
    font: inherit;
    vertical-align: baseline;
}

/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, menu, nav, section {
    display: block;
}

body {
    line-height: 1;
    overflow: hidden;
}

ol, ul {
    list-style: none;
}

blockquote, q {
    quotes: none;
}

table {
    border-collapse: collapse;
    border-spacing: 0;
}

/* CH02 - General Setup */

* {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    color: white;
}

body, html {
    background: #466368;
    background: -webkit-linear-gradient(#73BAAA 25%, #0B2E40);
    background: -moz-linear-gradient(#73BAAA 25%, #0B2E40);
    background: linear-gradient(#73BAAA 25%, #0B2E40);
}

a {
    text-decoration: none;
    font: 14px/150% 'Raleway', Arial, sans-serif;
    color: #949494;
}

h1 {
    font: 50px/150% 'Raleway', Arial, sans-serif;
}

h2 {
    font: 40px/150% 'Raleway', Arial, sans-serif;
    color: #2B2B2B;
}

h3 {
    font: 500 16px/150% 'Raleway', Arial, sans-serif;
    color: #FF7700;
}

h4 {
    font: bold 20px/150% 'Raleway', Arial, sans-serif;
    margin-bottom: 1%;
}

p {
    font: 14px/150% 'PT Sans', Arial, sans-serif;
    color: #949494;
    margin-bottom: 20px;
}

img {
    margin: 0 10px 10px 0;
}

section {
    min-height: 100vh;
    margin: 40px 10px 0 10px;
    position: relative;
}

figure {
    width: 100%;
    height: 100%;
}

::selection {
    background: #2B2B2B;
    color: #FF7700;
}

::-moz-selection {
    background: #2B2B2B;
    color: #FF7700;
}

::-webkit-scrollbar {
    width: 7px;
    height: 7px;
    cursor: pointer;
}

::-webkit-scrollbar-track {
    background: rgba(200, 200, 200, 0.8);
}

::-webkit-scrollbar-thumb {
    background-color: #FF7700;
}

/* CH02 - Navigation Menu */

#fixed-nav-bar ul {
    margin: 0;
    text-align: center;
    width: 100%;
    position: fixed;
    bottom: 0;
    z-index: 10000;
    border-top: 2px solid #FF7700;
    background-color: rgba(0, 0, 0, 0.8);
}

#fixed-nav-bar li {
    display: inline-block;
    margin: 0 5px;
    height: 50px;
    line-height: 50px;
}

#fixed-nav-bar li a {
    font-weight: 500;
    display: block;
    line-height: 50px;
    -moz-transition: color .5s ease;
    -o-transition: color .5s ease;
    -webkit-transition: color .5s ease;
    transition: color .5s ease;
}

#fixed-nav-bar li a:hover {
    color: #FF7700;
}

#fixed-nav-bar .active {
    color: #FF7700;
}

/* CH03 - Title Screen */

#title {
    text-align: center;
}

.top-absolute {
    position: absolute;
    top: 0;
    margin-top: 50px;
    left: 50%;
    transform: translateX(-50%);
}

.centered-absolute {
    position: absolute;
    top: 50%;
    left: 50%;
    width: 100%;
    transform: translate(-50%, -50%);
}

.border-text {
    display: inline-block;
    padding: 5px 10px;
    border: 2px solid #FF7700;
}

/* CH05 - About Screen */

.top-relative {
    padding: 20px 0;
    text-align: center;
}

.border-img {
    float: left;
    border: 2px solid white;
    margin-top: 5px;
}

.block-text {
    display: block;
    color: #2B2B2B;
}

.div-max-width {
    max-width: 1040px;
    display: block;
    margin-left: auto;
    margin-right: auto;
}

/* CH06 - Projects Screen */

.project-items {
    height: 400px;
    overflow-x: scroll;
    overflow-y: hidden;
    white-space: nowrap;
    margin-bottom: 30px;
    position: relative;
}

.project-items li {
    display: inline-block;
    vertical-align: top;
}

.project {
    width: 300px;
    height: 202px;
    margin: 150px 20px 0;
    padding: 5px;
    border-radius: 2px;
    position: relative;
    box-shadow: 0 10px 10px -5px rgba(0, 0, 0, 0.5);
    background-color: white;
    font-size: 14px;
    -webkit-transition: all .3s ease, opacity 2s ease, top 1s ease;
    -o-transition: all .3s ease, opacity 2s ease, top 1s ease;
    transition: all .3s ease, opacity 2s ease, top 1s ease
}

.view {
    overflow: hidden;
    width: 100%;
    height: 190px;
    position: relative;
}

.view img {
    -webkit-transition: width .3s ease;
    -o-transition: width .3s ease;
    transition: width .3s ease;
    width: 100%;
    margin: 0;
    position: absolute;
}

figcaption {
    height: 60px;
    width: 100%;
    padding: 0;
    position: absolute;
    bottom: 0;
    opacity: 0;
    overflow: hidden;
}

figcaption p {
    font-size: 12px;
    font-weight: bold;
    text-transform: uppercase;
    padding: 0 10px;
    margin: 5px 0;
    width: 100%;
}

figcaption a {
    font: bold 12px/150% 'PT Sans', Arial, sans-serif;
    color: #FF7700;
    -moz-transition: color .5s ease;
    -o-transition: color .5s ease;
    -webkit-transition: color .5s ease;
    transition: color .5s ease;
}

.project-title {
    z-index: 1;
    width: 160px;
    height: 30px;
    color: #2B2B2B;
    font: 600 14px/30px 'Raleway', Arial, sans-serif;
    text-transform: uppercase;
    text-align: center;
    border-radius: 1px;
    background-color: #FF7700;
    position: absolute;
    bottom: 30px;
    left: 15px;
    -webkit-transition: -webkit-transform 0.5s cubic-bezier(0.12, 1.6, 0.91, 0.92);
    -o-transition: -o-transform 0.5s cubic-bezier(0.12, 1.6, 0.91, 0.92);
    transition: -webkit-transform 0.5s cubic-bezier(0.12, 1.6, 0.91, 0.92);
    transition: -ms-transform 0.5s cubic-bezier(0.12, 1.6, 0.91, 0.92);
    transition: -o-transform 0.5s cubic-bezier(0.12, 1.6, 0.91, 0.92);
    transition: transform 0.5s cubic-bezier(0.12, 1.6, 0.91, 0.92)
}

.project:hover {
    height: 270px;
    -webkit-transform: translateY(-68px);
    -ms-transform: translateY(-68px);
    -o-transform: translateY(-68px);
    transform: translateY(-68px)
}

.project:hover .project-title {
    -webkit-transform: translate3d(0, 61px, 0);
    -ms-transform: translate3d(0, 61px, 0);
    -o-transform: translate3d(0, 61px, 0);
    transform: translate3d(0, 61px, 0)
}

.project:hover figcaption {
    -webkit-animation: show .25s ease-in .120s forwards;
    -o-animation: show .25s ease-in .120s forwards;
    animation: show .25s ease-in .120s forwards;
}

figcaption a:hover {
    color: #949494;
}

@keyframes show {
    to {
        opacity: 1;
    }
}

/* CH08 - Contact Screen */

#contact {
    margin: 0;
    text-align: center;
    background-image: url('../images/background.png');
    background-size: cover;
}

#contact-title {
    color: #2B2B2B;
}

.icon-row {
    width: 100%;
    height: 56px;
}

.icon-container {
    width: 50px;
    height: 50px;
    margin: 0 2px;
    position: relative;
    display: inline-block;
}

.icon-container img {
    position: absolute;
    top: 0;
    left: 0;
    width: 50px;
    height: 50px;
    margin: 0;
    display: inline-block;
    -webkit-transition: all .25s ease;
    -moz-transition: all .25s ease;
    -o-transition: all .25s ease;
    transition: all .25s ease;
}

.icon {
    filter: alpha(opacity=100);
    opacity: 1;
    z-index: 1;
}

.icon-hover {
    filter: alpha(opacity=0);
    opacity: 0;
    z-index: 2;
}

.icon-hover:hover {
    filter: alpha(opacity=100);
    opacity: 1;
}

.bottom-absolute {
    position: absolute;
    bottom: 0;
    left: 50%;
    width: 100%;
    transform: translateX(-50%);
}

.copyright {
    color: #2B2B2B;
    margin-bottom: 60px;
    font-size: 12px;
}

/* CH09 - Responsive Design */

@media (min-width: 500px) {
    h1 {
        font-size: 90px;
    }

    h2 {
        font-size: 50px;
    }

    a {
        font-size: 16px;
    }

    p {
        font-size: 16px;
    }

    section {
        margin: 40px 15px 0 15px;
    }

    img {
        margin: 0 15px 15px 0;
    }

    .top-relative {
        padding: 30px 0;
    }

    .border-img {
        width: 250px;
    }

    #fixed-nav-bar li {
        margin: 0 10px;
    }

}

@media (min-width: 750px) {
    h1 {
        font-size: 120px;
    }

    h2 {
        font-size: 60px;
    }

    h3 {
        font-size: 20px;
    }

    section {
        margin: 40px 20px 0 20px
    }

    img {
        margin: 0 20px 20px 0;
    }

    .top-relative {
        padding-top: 60px;
    }

    .border-img {
        width: 300px;
    }

    .icon-row {
        height: 66px;
    }

    .icon-container, .icon-container img {
        width: 60px;
        height: 60px;
    }

    #fixed-nav-bar li {
        margin: 0 15px;
    }

}

@media (min-width: 1000px) {
    h1 {
        font-size: 140px;
    }

    h3 {
        font-size: 28px;
    }

    p {
        font-size: 18px;
    }

    .border-img {
        width: 350px;
    }

    #fixed-nav-bar li {
        margin: 0 20px;
    }
}

